Closed
Bug 12565
Opened 24 years ago
Closed 23 years ago
document.form.encoding is not returning anything.
Categories
(Core :: DOM: Core & HTML, defect, P3)
Tracking
()
VERIFIED
FIXED
People
(Reporter: desale, Assigned: vidur)
References
Details
document.form.encoding is not returning anything. [It is supposed to return ENCTYPE] BUILDS: 08-24-13 [M9] [Apprunner/Viewer] 08-24-09 [M10] [Apprunner/Viewer] STEPS TO REPRODECE: 1] Please copy HTML code I'm providing. Save it as HTML file. 2] Open this file with Apprunner/Viewer. 3] You'll see one button called "Check Form.encoding". 4] Click this button. EXPECTED RESULTS: Text Box should show "multipart/form-data" Form.encoding:multipart/form-data ACTUAL RESULTS: Text Box does not show anything. Form.encoding: CODE: <HTML> <HEAD> <TITLE>Document Test</TITLE> </HEAD> <SCRIPT> <!-- function docprop(){ document.workform.result.value=document.workform.encoding; } //--> </SCRIPT> <BODY > <FORM NAME="workform" ENCTYPE = "multipart/form-data"> Form.encoding:<INPUT TYPE="text" SIZE="30" NAME="result" VALUE=""><BR> <INPUT TYPE="button" NAME="but1" VALUE="Check Form.encoding" onClick="docprop();"> <INPUT TYPE="reset" NAME="res1" VALUE="Reset"><BR><BR> <H3>Expected Answers:<BR></H3> Form.encoding:multipart/form-data </FORM> </BODY> </HTML> END OF CODE:
Reporter | ||
Updated•24 years ago
|
Summary: document.form.encoding is not returning anything.
Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Assignee | ||
Comment 1•24 years ago
|
||
I'm guessing form.enctype returns the right value. We just need to create the compatibility mapping.
Assignee | ||
Comment 2•23 years ago
|
||
Fixed on 1/27/2000.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
the testcase at http://mozilla.org/quality/ngdriver/suites/javascript/frm003.html still claim it's failing (bug 185312 was just filed)
You need to log in
before you can comment on or make changes to this bug.
Description
•