Fix for bug 12565. form.encoding returns the value of the ENCTYPE attribute, not ENCODING. r=joki